Corrected the static inner ByteList class to properly handle character encoding. MISC-17